# api-doc.json
@@ -68,6 +68,49 @@
         }
       }
     },
+    "/user/test-grants": {
+      "post": {
+        "summary": "Test grants in route",
+        "description": "This endpoint is protected and requires both a valid JWT token in the Authorization header.",
+        "tags": [
+          "User"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "User has the right to access this route.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "user has right"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized access due to missing, invalid, or expired token, or incorrect password.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Unauthorized"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/user/test-secure": {
       "post": {
         "summary": "Test secure route",
@@ -127,15 +170,15 @@
                 "properties": {
                   "username": {
                     "type": "string",
-                    "example": "user123"
+                    "example": "user@example.com"
                   },
                   "password": {
                     "type": "string",
-                    "example": "password123"
+                    "example": "1User@example.com"
                   },
                   "realmName": {
                     "type": "string",
-                    "example": "exampleRealm"
+                    "example": "asa.domain.com"
                   }
                 }
               }
@@ -204,7 +247,8 @@
                   },
                   "username": {
                     "type": "string",
-                    "description": "The user's username"
+                    "description": "The user's username",
+                    "example": "user@example.com"
                   },
                   "firstName": {
                     "type": "string",
@@ -217,11 +261,18 @@
                   "email": {
                     "type": "string",
                     "format": "email",
-                    "description": "The user's email address"
+                    "description": "The user's email address",
+                    "example": "user@example.com"
                   },
                   "password": {
                     "type": "string",
-                    "description": "The user's password"
+                    "description": "The user's password",
+                    "example": "1User@example.com"
+                  },
+                  "roleName": {
+                    "type": "string",
+                    "description": "The user's role",
+                    "example": "Admin"
                   }
                 },
                 "required": [
@@ -230,7 +281,8 @@
                   "firstName",
                   "lastName",
                   "email",
-                  "password"
+                  "password",
+                  "roleName"
                 ]
               }
             }
